@@ -121,6 +121,14 @@ config EXECFUNCS_NSYMBOLS
 		symbols in that table.  This selection provides the number of
 		symbols in the symbol table.
 
+config POSIX_SPAWN_STACKSIZE
+	int "posix_spawn Stack Size"
+	default 768
+	---help---
+		If posix_spawn[p] uses I/O redirection options, then it will require
+		an intermediary/proxy task to muck with the file descriptors.  This
+		configuration item specifies the stack size used for the proxy.
+
 endif
 
 config LIBC_STRERROR
