@@ -68,7 +68,7 @@
 #endif
 
 /****************************************************************************
- * Global Variables
+ * Public Variables
  ****************************************************************************/
 
 extern struct symtab_s CONFIG_EXECFUNCS_SYMTAB;
@@ -78,7 +78,7 @@ extern struct symtab_s CONFIG_EXECFUNCS_SYMTAB;
  ****************************************************************************/
 
 /****************************************************************************
- * Global Functions
+ * Public Functions
  ****************************************************************************/
 
 /****************************************************************************
